# travel-diary-survey-tools

./: .pre-commit-config.yaml  CODEBOOK_README.md  COLUMN_REQUIREMENTS.md  README.md  VALIDATION_README.md  column_requirements.csv  pyproject.toml
.github/workflows/: ci.yml  pr-checks.yml
archive/config/: pipeline_config_test.toml
docs/: CODEBOOK_README.md  COLUMN_REQUIREMENTS.md  VALIDATION_README.md  column_requirements.csv
examples/2023_analysis/: analyze_wfh.html  analyze_wfh.py  analyze_wfh.qmd  config.yaml  run.py
examples/2023_transit_analysis/: config.yaml  run.py  transit_analysis.py
examples/bats_2023/: analyze_wfh.qmd
examples/daysim/: config_daysim.yaml  run.py
old_tests/: test_daysim_formatting.py  test_linker.py  test_tours.py
projects/bats_2023/: clean_bats_2023.py  config.yaml  join_maztaz.py  run.py
scripts/: calibrate_joint_trip_covariance.py  debug_filtering.py  generate_column_matrix.py  summarize_pipeline_run.py
scripts/analysis/: investigation.qmd
scripts/daysim/: __init__.py  config_daysim.yaml  run.py
src/data_canon/: __init__.py  checks.py  dataclass.py  labeled_enum.py  models.py  step_field.py
src/pipeline/: __init__.py  cache.py  decoration.py  logger.py  pipeline.py
src/processing/: __init__.py  decoration.py  final_check.py  link.py  pipeline.py  read_write.py
src/travel_diary_survey_tools/: __init__.py  constants.py  linker.py  models.py  person_type.py  pipeline.py  (+2 more)
tests/: test_add_zone_ids.py  test_cache.py  test_ctramp_formatter.py  test_daysim_formatter.py  test_daysim_formatting.py  test_duration_tiebreaker.py  test_existing_weights.py  test_joint_tours.py  test_joint_trips.py  test_legacy_link_trips.py  test_legacy_tours.py  test_link_trips.py  test_linker.py  test_read_write.py  test_step_validation.py  test_tour_edge_cases.py  test_tours.py  test_utils.py  test_validation.py  test_validation_coverage.py
(+152 files in other folders)
