
[project]
name = "travel-diary-survey-tools"
version = "0.1.0"
description = "Set of tools to process and analyze travel diary survey data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.1.1",
    "numpy>=2.3.4",
    "polars>=1.35.1",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.4",
    "scipy>=1.16.3",
]

[dependency-groups]
test = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
dev = [
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/processing", "src/data_canon"]

[tool.ruff]
line-length = 80
lint.select = ["ALL"]
lint.pylint.max-args = 8  # Increase from default of 5 to accomodate 6 canon tables
lint.ignore = [
    "COM812",  # Trailing comma - conflicts with formatter
    "D203",    # Use D211 (no blank line before class)
    "D213",    # Use D212 (summary on first line)
]
lint.pydocstyle.convention = "google"
exclude = ["scripts/daysim_old"]


[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",      # assert is fine in tests
    "PLR0913",   # many arguments OK for test helpers
    "PLR2004",   # allow magic numbers in tests
    "ANN",       # type annotations optional in tests
    "SLF001",    # allow access to private members in tests
    "DTZ001",    # allow naive datetime in tests
]
"scripts/**/*.py" = [
    "INP001",      # script not part of package
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/processing --cov=src/data_canon --cov-report=term-missing"
